--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .chat {
   position: relative;
   display: flex;
@@ -9,6 +11,10 @@
   padding: 20px;
   overflow: hidden;
   margin: 0;
+
+  @include sm {
+    flex-direction: column;
+  }
 
   &:has(.chatBox:not(:empty)) {
     .messages {
