--- a/client/src/routes/homePage/homePage.scss
+++ b/client/src/routes/homePage/homePage.scss
@@ -75,7 +75,7 @@
         @include sm {
           flex-direction: column;
           gap: 16px;
-          margin-top: 0; 
+          margin-top: 200px; 
         }
         .box {
           background: #fff;
